Updated to 0.004 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  WWW-Pastebin-PastebinCa-Create-0.001.tar.gz: 157aa3d70836d58729ebb8401cb55a2d64f9a88b
 sources:
-  "WWW-Pastebin-PastebinCa-Create-0.001.tar.gz": 157aa3d70836d58729ebb8401cb55a2d64f9a88b
+  WWW-Pastebin-PastebinCa-Create-0.004.tar.gz: 08206e33916cd11398358210e51d7f78b7143629
